# formalki-prac

./: CMakeLists.txt  README.md  main.cpp  solver.cpp  solver.h  tests.cpp
